--- a/themes/sphinx-bootstrap/static/style.css
+++ b/themes/sphinx-bootstrap/static/style.css
@@ -1,10 +1,28 @@
 /* Override some defaults */
-html, body {
+/*html, body {
   background-color: #eee;
+}*/
+
+/* add some padding for fixed navbar */
+body {
+    padding-top: 60px;
 }
+
 .navbar {
   margin-bottom: 0;
 }
+
+.navbar-search {
+	padding-left: 0;
+  margin-top: 0px;
+  margin-bottom: 6px;
+}
+
+.navbar-search input {
+    margin-top:    0px;
+    margin-bottom: 6px;
+}
+
 .container > footer {
   margin-top: 20px;
 }
@@ -17,12 +35,12 @@ html, body {
   background-color: #fff;
   padding: 20px;
   margin: 0 -20px; /* negative indent the amount of the padding to maintain the grid system */
-  -webkit-border-radius: 0 0 6px 6px;
+/*  -webkit-border-radius: 0 0 6px 6px;
      -moz-border-radius: 0 0 6px 6px;
           border-radius: 0 0 6px 6px;
   -webkit-box-shadow: 0 1px 2px rgba(0,0,0,.15);
      -moz-box-shadow: 0 1px 2px rgba(0,0,0,.15);
-          box-shadow: 0 1px 2px rgba(0,0,0,.15);
+          box-shadow: 0 1px 2px rgba(0,0,0,.15);*/
 }
 
 /* Page header tweaks */
@@ -68,4 +86,17 @@ html, body {
 	border:1px solid #4C964D;
 	color:#FFF;
 }
-	
+
+.container-fluid {
+		max-width: 970px;
+		margin: 0 auto;
+		padding-left: 20px;
+		padding-right: 20px;
+}
+
+@media only screen and (min-width: 980px) {
+  .navbar-search {
+		margin-top: 6px;
+		margin-bottom: 0;
+	}
+}
