--- a/themes/sphinx-bootstrap/raw_css/style.css
+++ b/themes/sphinx-bootstrap/raw_css/style.css
@@ -1,4 +1,4 @@
-/* Override some defaults */
+emac/* Override some defaults */
 /*html, body {
   background-color: #eee;
 }*/
@@ -94,9 +94,98 @@ body {
 		padding-right: 20px;
 }
 
-@media only screen and (min-width: 980px) {
+/* @media only screen and (min-width: 980px) {
   .navbar-search {
 		margin-top: 6px;
 		margin-bottom: 0;
+	}
+} */
+
+@media only screen and (min-width: 768px) {
+	.carousel-caption p{
+		display: block;
+	}
+}
+
+@media only screen and (min-width: 980px) {
+	body{
+		padding-top: 60px;
+	}
+
+	.container-fluid{
+		max-width: 970px;
+		margin: 0 auto;
+		padding-left: 20px;
+		padding-right: 20px;
+	}
+
+	#inner-footer{
+		padding: 0;
+	}
+
+	#content{
+		padding-left: 0;
+		padding-right: 0;
+	}
+
+	.topbar-inner{
+		padding: 0;
+	}
+
+	.topbar form.pull-right {
+		float: right;
+	}
+
+	.navbar-form, .navbar-search {
+		margin-top: 6px;
+		margin-bottom: 0;
+	}
+
+	.navbar-search{
+		padding-left: 0;
+	}
+
+	.sidebar{
+		margin-top: 0 !important;
+	}
+
+	.widget_search input{
+		width: 230px;
+	}
+
+	.blog .hero-unit{
+		margin-top: 10px;
+	}
+
+	.page-template-page-homepage-php .hero-unit,
+	.blog .hero-unit{
+		padding: 60px;
+	}
+
+	.hero-unit h1 {
+		font-size: 60px;
+	}
+
+	/* hide edit comment button and show on hover on desktop version */
+	.edit-comment{
+		display: none;
+	}
+
+	.vcard:hover .edit-comment{
+		display: inline-block;
+	}
+
+	#s{
+		width: 210px;
+		margin-bottom: 6px;
+	}
+
+	.widget_search input{
+		width: 209px;
+	}
+
+	.comment .vcard .comment-text{
+		padding-left: 0;
+		padding-right: 0;
 	}
 }
